@@ -1,3 +1,9 @@
+2008-12-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* vertimus/forms.py:
+	* vertimus/models.py:
+	* vertimus/views.py: Added forms validators for file and comment.
+
 2008-12-30  Claude Paroz  <claude@2xlibre.net>
 
 	* media/css/main.css: Add new class used in vertimus_detail.
